[bug/S3-5] Create scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,4 +49,19 @@
   .font-Samuel {
     font-family: 'HhSamuel-E80W';
   }
+
+  .scrollbar-container.ps--active-x > .ps__rail-x {
+    background-color: #d4d4d8;
+  }
+  .scrollbar-container .ps__rail-x {
+    opacity: 0.6;
+    height: 4px;
+    bottom: 0px;
+  }
+  .scrollbar-container .ps__thumb-x {
+    background-color: #52525b;
+    height: 10px;
+    bottom: -3px;
+    border: white solid 3px;
+  }
 }
